# ruiv2

./: .gitignore  Cargo.toml
crates/rui/: Cargo.toml
crates/rui-cli/: Cargo.toml
crates/rui-cli/src/: main.rs
crates/rui-cli/templates/: Cargo.toml.tpl  api_mod.rs.tpl  app.rs.tpl  components_mod.rs.tpl  data_mod.rs.tpl  lib.rs.tpl  page_home.rs.tpl  pages_mod.rs.tpl  ssr.rs.tpl  view_mod.rs.tpl
crates/rui-macros/: Cargo.toml
crates/rui-macros-tests/: Cargo.toml
crates/rui-macros-tests/tests/: compile_fail.rs
crates/rui-macros-tests/tests/fail/: component_generics.rs  component_generics.stderr  page_generics.rs  page_generics.stderr  page_param_mismatch.rs  page_param_mismatch.stderr
crates/rui-macros-tests/tests/pass/: registry_custom_layout.rs
crates/rui-macros/src/: lib.rs
crates/rui/src/: deploy.rs  dom.rs  jobs.rs  lib.rs  props.rs  reactive.rs  runtime.rs  server.rs  server_axum.rs  view.rs
crates/rui/src/assets/: router.js
crates/rui/src/gql/: exec.rs  mod.rs  orm.rs  parser.rs  store.rs  value.rs
crates/rui/tests/: layering.rs
docs/: rui-ocaml-design.md  v2.md
examples/stocks/: Cargo.toml  hydrate.mjs  verify.mjs
examples/stocks/src/: app.rs  lib.rs
examples/stocks/src/api/: db.rs  jobs.rs  mod.rs  orders.rs  schema.rs  stocks.rs  todos.rs
examples/stocks/src/data/: mod.rs  model.rs
examples/stocks/src/view/: components.rs  layout.rs  mod.rs
examples/stocks/src/view/components/: add_form.rs  counters.rs  greeting_badge.rs  mod.rs  panel.rs  risky.rs  shared.rs  stat.rs  status_banner.rs  todo_item.rs  toolbar.rs  uptime.rs
examples/stocks/src/view/pages/: about.rs  archive.rs  boundary.rs  cards.rs  counter.rs  detail.rs  draft.rs  feed.rs  forms.rs  index.rs  live.rs  mac.rs  mod.rs  orders.rs  overview.rs  settings.rs  stock.rs  table.rs  transitions.rs
examples/stocks/src/view/pages/dash/: mod.rs
