[package]
name = "rui"
version = "0.1.0"
edition = "2021"

[dependencies]
rui-macros = { path = "../rui-macros" }

# 生产 HTTP 后端(可选,feature = "axum")。仅非 wasm 目标拉取 → 默认/客户端仍零依赖、wasm 不受影响。
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "net", "sync", "signal", "time"] }
tokio-stream = { version = "0.1", optional = true }
# 生产 GraphQL 引擎(async resolver + per-request Context + DataLoader)。与 axum 同档:只随 axum host 到来。
async-graphql = { version = "7.2.1", optional = true }
async-graphql-axum = { version = "7.2.1", optional = true }
serde_json = { version = "1", optional = true } # 序列化 async-graphql Response → JSON(已在 async-graphql 依赖树内)

[features]
# 启用后可用 rui::serve_axum(生产网络栈:有界并发 / 优雅关闭 / body 上限 / SSE keep-alive)+ async-graphql 引擎。
# 不启用则只有零依赖的 std rui::serve(手搓 GraphQL 引擎 exec.rs)。
axum = ["dep:axum", "dep:tokio", "dep:tokio-stream", "dep:async-graphql", "dep:async-graphql-axum", "dep:serde_json"]
