[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rui = { path = "../../crates/rui" }
rui-macros = { path = "../../crates/rui-macros" }

# axum 生产后端只对 native(SSR bin)启用 —— wasm 客户端不拉 axum/tokio/async-graphql(零依赖不变)。
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rui = { path = "../../crates/rui", features = ["axum"] }
# 服务端 GraphQL schema 用 async-graphql 定义(与 rui 同版本 → cargo 统一为一份)。
async-graphql = "7.2.1"

[[bin]]
name = "ssr"
path = "src/bin/ssr.rs"
