[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rui = { path = "../../crates/rui" }
rui-macros = { path = "../../crates/rui-macros" }

# axum 生产后端只对 native(SSR bin)启用 —— wasm 客户端不拉 axum/tokio/async-graphql(零依赖不变)。
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rui = { path = "../../crates/rui", features = ["axum"] }
# 服务端 GraphQL schema 用 async-graphql 定义(与 rui 同版本 → cargo 统一为一份)。
async-graphql = "7.2.1"
# 异步 PG 驱动(resolver 现是 async → 直接 .await 查库)。DATABASE_URL 未设则 resolver 回退内存。
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1", default-features = false, features = ["sync"] } # OnceCell:连接池懒初始化(在 runtime 内首次连接)

[[bin]]
name = "ssr"
path = "src/bin/ssr.rs"
