[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rui = { path = "../../crates/rui" }
rui-macros = { path = "../../crates/rui-macros" }

# axum 生产后端只对 native(SSR bin)启用 —— wasm 客户端不拉 axum/postgres(零依赖不变)。
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rui = { path = "../../crates/rui", features = ["axum"] }
# 同步 PG 驱动(契合 rui 同步 exec 引擎:无 tokio / 无 async / 无 block_on 桥)。DATABASE_URL 未设或连接失败 → 回退内存后端。
postgres = "0.19"

[[bin]]
name = "ssr"
path = "src/bin/ssr.rs"
